--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "homecenter-backend",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
   "private": true,
-  "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
